--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -18,10 +18,15 @@
       order: 1;
       display: flex;
       justify-content: space-between;
-      width: 30%;
+      max-width: 30%;
       padding-left: 0;
       padding-bottom: 2rem;
       margin: 0 auto;
+    }
+
+    @include respond(phone) {
+      margin: 0;
+      // justify-content: center;
     }
 
     .currency__box {
